# pywoddle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/pywoddle/: __init__.py  auth.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_models.py
