[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywoddle"
version = "0.1.0"
description = "Async Python client for the Woddle Smart Baby Scale API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Jon Lamendola"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/jlamendola/pywoddle"
Repository = "https://github.com/jlamendola/pywoddle"
Issues = "https://github.com/jlamendola/pywoddle/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
